<resources>
    <string name="app_name">MediMarque</string>
    <string name="medimarque">MediMarque</string>
    <string name="nome">Nome</string>
    <string name="medi_marque">Medi Marque</string>
    <string name="Usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="Login">Login</string>
    <string name="bem_vindo_a_marcos">Bem-Vindo(a),Marcos</string>
    <string name="especialidades">Especialidades</string>
    <string name="agendar">AGENDAR</string>
    <string name="cardiologista">Cardiologista</string>
    <string name="agendamento">Agendamento</string>
    <string name="data">Data</string>
    <string name="hora">hora</string>
    <string name="escolha_seu_m_dico_a">Escolha seu médico(a)</string>
    <string name="lucas_sampaio_leite">Lucas Sampaio Leite</string>
    <string name="rosiberto_santos_goncalves">Rosiberto Santos Goncalves</string>
    <string name="magno_felipe_holanda">Magno Felipe Holanda</string>
    <string name="Agendar">Agendar</string>
    <string name="bem_vindo_a_usuario">Bem-vindo(a),Usuario</string>
</resources>