<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">



<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_projeto"
    android:gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medi_marque"
        android:textSize="36sp"
        android:textColor="@color/branco_fumaca"
        android:textStyle="bold"
        android:gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Usuario"
        android:textColor="@color/verde_projeto"
        android:textStyle="bold"
        android:background="@color/branco_fumaca"
        android:maxLines="1"
        android:inputType="text"
        android:gravity="center"
        android:padding="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:textColor="@color/verde_projeto"
        android:textStyle="bold"
        android:background="@color/branco_fumaca"
        android:maxLines="1"
        android:inputType="numberPassword"
        android:gravity="center"
        android:padding="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>


    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textColor="@color/verde_projeto"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="15dp"
        app:cornerRadius="15dp"
        android:backgroundTint="@color/branco_fumaca"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"


        />

</LinearLayout>
</ScrollView>